# fansly-scraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .snyk  404.html  CHANGELOG.md  Dockerfile  LIVESTREAM_PLAN.md  README.md  ReleaseNotes.md  RewriteNotes.md  config.sample.yaml  db_init_scratch.py  fansly_downloader_ng.py  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  search.html  sitemap.xml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: report-a-bug.md
.github/workflows/: ci-lint.yml  docs.yml  python-pyinstaller-multi-versatile.yml.disabled  release-on-tag.yml  stale-issues.yml
alembic/: env.py
alembic/versions/: 0b04c70972e4_relationship_with_wall.py  3a230146cb14_rename_monitorstate_lastseenat_to_.py  4416b99f028e_index_value_of_hashtag.py  6196a903fd09_added_is_downloaded_hash_local_filename.py  671bc5c3096d_add_unique_constraint_to_media_.py  7c3779509867_walls_createdat.py  7e027587c638_add_monitorstate_table.py  7f057c9b00e0_modify_post_mentions_constraints.py  84146fdb359d_correct_spelling_of_variants_plus_others.py  a91d60345484_replace_stories_with_media_stories.py  b8dcecc1e979_bigint.py  bb7006ec7c0e_make_media_locations_location_nullable.py  e4a1f7e15836_add_id_primary_key_to_post_mentions.py  f1a2b3c4d5e6_fix_timestamp_columns_to_timestamptz.py  merge_recent_migrations.py
api/: fansly.py  rate_limiter.py  rate_limiter_display.py  websocket.py  websocket_protocol.py  websocket_subprocess.py
archive/hardCut-PostgreSQL-Implementation-Plan/: index.html
changelog/: index.html
config/: __init__.py  args.py  browser.py  config.py  fanslyconfig.py  loader.py  logging.py  modes.py  schema.py  validation.py
configuration/config_options/: index.html
daemon/: __init__.py  bootstrap.py  dashboard.py  filters.py  handlers.py  livestream_watcher.py  polling.py  runner.py  simulator.py  state.py
docs/: index.md
docs/archive/: Fansly-Stash-progress.md  OPTIMIZATION_PROTOTYPES.md  SxS-PostgreSQL-Implementation-Plan.md
docs/configuration/: config_options.md
docs/guide/: manual-token-extraction.md
docs/planning/: STASH_ORM_MIGRATION_GUIDE.md  async-conversion.md  hardCut-PostgreSQL-Implementation-Plan.md  monitoring-daemon-architecture.md
docs/reference/: CHECKKEY_JSPYBRIDGE.md  Fansly-API-analysis.md  Fansly-Route-Table.md  Fansly-Stash-field-transformations.md  Fansly-Stash-mapping.md  Fansly-Stash-performer-mapping.md  Fansly-WebSocket-Protocol.md  Stash-Processing-Patterns.md  architecture.md  database_design.md  monitoring-cadence.md  request-signing.md
docs/testing/: API_DOWNLOAD_TEST_MIGRATION_TODO.md  API_TESTING_REQUIREMENTS.md  METADATA_TEST_MIGRATION_TODO.md  PASS_2_AUDIT_MASTER_REPORT.md  STASH_TEST_MIGRATION_TODO.md  TESTING_REQUIREMENTS.md  V0_10_MOCK_PATTERNS.md  dead_tests_audit_2026-05-05.md  snyk-violations-from-contributers.md
download/: __init__.py  account.py  collections.py  common.py  core.py  downloadstate.py  livestream.py  livestream_chat.py  m3u8.py  media.py  messages.py  single.py  statistics.py  stories.py  timeline.py  transaction.py  types.py  wall.py
errors/: __init__.py
fileio/: dedupe.py  fnmanip.py  livestream.py  normalize.py
guide/manual-token-extraction/: index.html
helpers/: __init__.py  checkkey.py  common.py  rich_progress.py  web.py
media/: __init__.py  media.py
metadata/: __init__.py  account.py  attachment.py  database.py  entity_store.py  hashtag.py  logging_config.py  media.py  media_utils.py  messages.py  models.py  post.py  relationship_logger.py  story.py  stub_tracker.py  tables.py  wall.py
pathio/: __init__.py  livestream.py  pathio.py  types.py
planning/STASH_ORM_MIGRATION_GUIDE/: index.html
planning/monitoring-daemon-architecture/: index.html
reference/CHECKKEY_JSPYBRIDGE/: index.html
reference/Fansly-API-analysis/: index.html
reference/Fansly-Route-Table/: index.html
reference/Fansly-Stash-field-transformations/: index.html
reference/Fansly-Stash-mapping/: index.html
reference/Fansly-Stash-performer-mapping/: index.html
reference/Fansly-WebSocket-Protocol/: index.html
reference/architecture/: index.html
reference/monitoring-cadence/: index.html
reference/request-signing/: index.html
scripts/: backfill_media_variants.py  color_palette.py  migrate_from_ng.py  websocket_example.py  ws_monitor.py
search/: search_index.json
stash/processing/: __init__.py  base.py  protocols.py
stash/processing/mixins/: account.py  batch.py  content.py  gallery.py  media.py  studio.py  tag.py
testing/API_DOWNLOAD_TEST_MIGRATION_TODO/: index.html
testing/API_TESTING_REQUIREMENTS/: index.html
testing/PASS_2_AUDIT_MASTER_REPORT/: index.html
testing/STASH_TEST_MIGRATION_TODO/: index.html
testing/TESTING_REQUIREMENTS/: index.html
testing/V0_10_MOCK_PATTERNS/: index.html
testing/dead_tests_audit_2026-05-05/: index.html
testing/snyk-violations-from-contributers/: index.html
tests/: conftest.py  test_crypto.py
tests/alembic/: test_env.py  test_migration_edge.py  test_migrations.py
tests/api/unit/: test_fansly_api.py  test_fansly_api_additional.py  test_fansly_api_callback.py  test_fansly_api_monitoring.py  test_rate_limiter.py  test_rate_limiter_display.py  test_websocket.py  test_websocket_subprocess.py  test_websocket_thread.py
tests/config/functional/: test_logging_functional.py
tests/config/integration/: test_browser_integration.py  test_config_integration.py  test_fanslyconfig_schema_bridge.py  test_ini_migration.py  test_no_config_args_ini.py
tests/config/unit/: test_args.py  test_browser.py  test_config.py  test_config_init.py  test_download_modes.py  test_fanslyconfig.py  test_loader.py  test_logging.py  test_metadatahandling.py  test_schema.py  (+2 more)
tests/daemon/: __init__.py  conftest.py
tests/fileio/: test_dedupe.py
tests/fixtures/: __init__.py
tests/functional/: test_main_integration.py
tests/pathio/: test_pathio.py
tests/performance/: test_download_performance.py
tests/stash/: test_assert_op_helpers.py  test_logging.py
textio/: logging.py  prompts.py  textio.py
(+185 files in other folders)
