[project]
name = "fansly-scraper"
version = "0.11.0"
description = "Easy-to-use fansly.com content scraping tool. Enjoy your Fansly content offline anytime, anywhere in the highest possible content resolution! Fully customizable to download in bulk or single: photos, videos & audio from the timeline, messages, collection & single posts."
authors = [
    {name ="prof79"},
    {name ="Avnsx"},
    {name ="pawnstar81"},
    {name ="UpAndDown666"},
    {name ="icewinterberry12"},
    {name ="1gintonic"},
    {name ="Jakan", email ="github@jakan.co"},
]
# credits = [
#     "Avnsx",
#     "KasumiDev",
#     "FletcherD",
#     "XelaRellum",
#     "sunbart",
# ]
license = "GPL-3.0-only"
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.12,<3.14"
imagehash = ">=4.3.1,<5.0.0"
loguru = ">=0.7.2"
m3u8 = ">=6.0.0"
pillow = ">=12.0.0"
psutil = ">=5.9.8"
python-dateutil = ">=2.8.2,<3.0.0"
rich = ">=13.7.0,<15.0.0"
strenum = ">=0.4.15,<0.5.0"
websockets = ">=15.0.0"
alembic = ">=1.17.0"
aiosqlite = ">=0.20.0"
greenlet = ">=3.2.1"
aiomultiprocess = ">=0.9.1"
toml = ">=0.10.2"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.44,<3.0.0"}
httpx = {extras = ["http2"], version = ">=0.28.1"}
websocket-client = ">=1.8.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
asyncpg = ">=0.30.0,<1.0.0"
psycopg = {version = ">=3.2.10,<4.0.0", extras = ["binary", "pool"]}
httpx-retries = ">=0.4.3"
ffmpeg-python = ">=0.2.0"
jsbeautifier = ">=1.15.4"
javascript = ">=1!1.2.6"
stash-graphql-client = ">=0.10.8"


[tool.poetry.group.browser-auth]
optional = true

[tool.poetry.group.browser-auth.dependencies]
plyvel-ci = ">=1.5"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pyinstaller = ">=6.11.1"
memory-profiler = ">=0.61.0"
pylint = ">=3.3.3"
pre-commit = ">=4.0.1"
bandit = {extras = ["toml"], version = ">=1.8.0"}
ruff = ">=0.14.2"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
mypy = ">=1.11.0"
types-python-dateutil = ">=2.9.0.20241206"
types-requests = ">=2.32.0.20241016"
types-setuptools = ">=75.6.0.20241126"
types-pillow = ">=10.2.0"
types-toml = ">=0.10.8.20240310"
types-m3u8 = ">=6.0.0.20250708"
types-psutil = ">=7.0.0.20250401"
types-tqdm = ">=4.67.0.20241221"

[tool.poetry.group.test.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0.0"
pytest-asyncio = ">=0.26.0"
pytest-timeout = ">=2.3.1"
pytest-randomly = ">=3.16.0"
pytest-mock = ">=3.14.0"
pytest-xdist = ">=3.6.1"
coverage = {extras = ["toml"], version = ">=7.8"}
psutil = ">=7.0.0"
pytest-loguru = ">=0.4.0"
factory-boy = ">=3.3.3"
pytest-rerunfailures = ">=16.1"
respx = "^0.22.0"


[tool.bandit]
# Exclude test files and example scripts
exclude_dirs = ["tests", "scripts"]
# Skip specific checks
skips = [
    'B110',  # try-except-pass
    'B113',  # request-without-timeout
    'B311',  # random
    'B404',  # import-subprocess
    'B601',  # paramiko
    'B602',  # subprocess-popen-with-shell-equals-true
    'B603',  # subprocess-without-shell-equals-true
    'B605',  # start-process-with-partial-path
    'B606',  # start-process-with-no-shell
    'B607',  # start-process-with-partial-path
    'B608',  # hardcoded-sql-expressions
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Enable flake8 rules (F, E, W), isort (I), pyupgrade (UP), and more
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C90",    # mccabe complexity
    "N",      # pep8-naming
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PL",     # pylint
    "TRY",    # tryceratops
    "NPY",    # numpy-specific rules
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]

ignore = [
    "C901",   # mccabe complexity (handled by mccabe settings)
    "E501",    # line too long (handled by formatter)
    "ANN401",  # dynamically typed expressions (Any)
    "S603",    # subprocess without shell
    "S608",    # hardcoded SQL expressions
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
    "TRY003",  # avoid specifying long messages outside exception class
    "TRY301",  # abstract raise to inner function (unnecessary for simple validation)
    "EM101",   # exception must not use string literal
    "EM102",   # exception must not use f-string literal
    "G004",    # logging statement uses f-string (intentional with loguru)
    "PLW0603", # global statement (used intentionally for module state)
    "RET504",  # unnecessary variable assignment before return
    "A002",    # argument shadowing builtin
    "A003",    # class attribute shadowing builtin
    "BLE001",  # blind except Exception
    "B904",    # raise without from inside except
    "N818",    # exception name should end with Error
    "T201",    # print statements (used intentionally in CLI tool)
    "ERA001",  # commented-out code (keep for now during development)
    "SLF001",  # private member access (sometimes necessary)
]

[tool.ruff.lint.mccabe]
max-complexity = 14

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F841",    # local variable assigned but never used
    "F811",    # redefinition of unused name
    "ARG001",  # unused function argument
    "ARG002",  # unused method argument
    "PLR0913", # too many arguments
    "S101",    # use of assert
    "S105",    # test fixtures use hardcoded test values
    "ANN001",  # missing type annotation for function argument
    "ANN002",  # missing type annotation for *args
    "ANN003",  # missing type annotations for **kwargs in test helpers
    "ANN201",  # missing return type annotation
    "ANN202",  # missing return type annotation for private function
    "ANN204",  # missing return type annotation for special method
    "E721",    # type comparisons with == (checking type annotations in tests)
    "RUF012",  # mutable class attributes in test fixtures and mock classes
    "PLC0415", # import outside top-level (common in test fixtures)
    "D",       # pydocstyle
    "B017",    # pytest.raises(Exception) is acceptable in integration tests
    "PT011",   # pytest.raises(Exception) is acceptable in integration tests
]
"alembic/**/*.py" = [
    "INP001",  # implicit namespace package
    "ANN001",  # missing type annotation for function argument
    "ANN201",  # missing return type annotation
]
"textio/logging.py" = [
    "N803",    # argument names match upstream logging.handlers API (maxBytes, backupCount)
]
"stash/types/*.py" = [
    "N815",    # mixedCase variable names match upstream Stash GraphQL schema
    "RUF012",  # mutable class attributes are intentional in Strawberry GraphQL type definitions
]
"stash/processing/*.py" = [
    "N815",    # mixedCase variable names match Fansly API response format
]
"metadata/*.py" = [
    "N815",     # mixedCase variable names match Fansly API response format
    "PLC0415",  # imports inside functions to avoid circular dependencies
]
"tests/fixtures/*.py" = [
    "N815",    # test factories mirror metadata models with camelCase fields
]
"tests/fixtures/__init__.py" = [
    "F401",    # intentional re-exports for fixture module
]
"api/websocket_example.py" = [
    "S105",    # example code with placeholder credentials
]
"scripts/**/*.py" = [
    "ALL",     # utility scripts don't require linting
]
"stash/client/protocols.py" = [
    "ASYNC109",  # protocol definitions don't implement timeout logic
    "ARG002",    # protocol method signatures don't use their parameters
]
"stash/**/*.py" = [
    "TID252",   # relative imports are standard in this package structure
    "PLC0415",  # imports inside functions to avoid circular dependencies
]
"tests/stash/**/*.py" = [
    "TID252",   # relative imports for test fixtures
]
"config/*.py" = [
    "PLC0415",  # imports inside functions to avoid circular dependencies
]
"download/*.py" = [
    "PLC0415",  # imports inside functions to avoid circular dependencies
]
"api/*.py" = [
    "PLC0415",  # conditional imports and circular import avoidance
]
"helpers/*.py" = [
    "PLC0415",  # conditional imports and circular import avoidance
]
"fileio/*.py" = [
    "PLC0415",  # imports inside functions to avoid circular dependencies
]
"scripts/*.py" = [
    "PLC0415",  # script-specific lazy imports
]
"fansly_downloader_ng.py" = [
    "PLC0415",  # lazy imports for optional dependencies and circular imports
]
"**/conftest.py" = ["F401", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["config", "api", "download", "metadata", "stash", "fileio", "pathio", "textio", "helpers", "errors"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-config=pyproject.toml",
]
timeout = 60
timeout_method = "thread"
timeout_func_only = true
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "default::errors.StashCleanupWarning",  # Always show Stash cleanup warnings (must come after ignore::UserWarning)
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::coverage.exceptions.CoverageWarning",
    "ignore::pluggy.PluggyTeardownRaisedWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "functional: marks tests as functional tests",
    "performance: marks tests as performance tests",
    "full_workflow: marks tests that run the complete workflow",
    "comprehensive: marks tests that check for comprehensive coverage",
]

[tool.coverage.run]
branch = true
source = ["."]
data_file = ".coverage"
omit = [
    "*/venv/*",
    "*/venv_test/*",
    "*/__pycache__/*",
    "*/tests/*",
    "docs/*",
    "*/migrations/*",
    "*/.pytest_cache/*",
    "*/.git/*",
    "*/.github/*",
    "*/htmlcov/*",
    "stash/example.py"  # Example code, not production code
]
command_line = "-m pytest discover -s tests/"
parallel = true
concurrency = ["multiprocessing"]
disable_warnings = [
    "no-data-collected",
    "module-not-imported",
    "couldnt-parse",
]
# Fix for Mock serialization issues in parallel mode
sigterm = true

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
    "\\.\\.\\.$",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if TESTING:"
]
ignore_errors = true
skip_empty = true
skip_covered = false
precision = 2
show_missing = true
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"
title = "Coverage Report"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"
package_depth = 2

[tool.mypy]
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin"]
# Exclude directories from type checking
exclude = [
    "tests/",
    "venv_test/",
    "alembic/versions/",
    "scripts/",
]

# Keep these basic checks
warn_unused_configs = true
warn_redundant_casts = true
check_untyped_defs = true

# RELAX these from strict mode:
strict = false  # Turn off blanket strict mode
disallow_untyped_defs = false  # Too aggressive for this codebase
disallow_untyped_calls = false  # Blocks untyped library usage
disallow_untyped_decorators = false  # Too aggressive for decorators
warn_return_any = false  # Too noisy with untyped libraries
disallow_any_generics = false  # Blocks dict(), list(), etc.

# Keep these useful ones:
disallow_incomplete_defs = true  # Still check partial type hints
no_implicit_reexport = true  # Good practice
strict_equality = true  # Catches bugs

# Skip alembic migration files completely
[[tool.mypy.overrides]]
module = "alembic.versions.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
follow_imports = "skip"
ignore_errors = true

# Skip scripts completely
[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
follow_imports = "skip"
ignore_errors = true

# Libraries without type stubs
[[tool.mypy.overrides]]
module = "plyvel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "javascript.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ffmpeg.*"
ignore_missing_imports = true

# Problematic modules with complex typing issues
[[tool.mypy.overrides]]
module = "config.logging"
# Loguru callback hell with dynamic typing
ignore_errors = true

[[tool.mypy.overrides]]
module = "config.browser"
# Uses plyvel (no type stubs)
ignore_errors = true

[[tool.mypy.overrides]]
module = "helpers.checkkey"
# Uses javascript library (no type stubs)
ignore_errors = true

[[tool.mypy.overrides]]
module = "download.m3u8"
# Uses ffmpeg and m3u8 libraries (no type stubs)
ignore_errors = true

[[tool.mypy.overrides]]
module = "metadata.decorators"
# Complex decorator typing with dynamic behavior
ignore_errors = true

[[tool.mypy.overrides]]
module = "config.decorators"
# Complex decorator typing with dynamic behavior
ignore_errors = true

# stash-graphql-client now on PyPI - CodeArtifact no longer needed
